--- a/src/lessen.html
+++ b/src/lessen.html
@@ -92,10 +92,108 @@
                 </div>
             </div>
         </div>
-        <div class="flex justify-center">
-            <img class="w-[409px] h-[737px]" src="./foto/Group 8.svg" alt="">
-            <p class="font-bold text-[14px] text-[#244886]">Core features</p>
-            <p>Smart Jackpotsthat you may love this anytime & anywhere</p>
+        <div class="mt-[100px] flex justify-center gap-[100px]">
+            <img class="xl:block hidden w-[409px] h-[737px] relative z-10" src="./foto/Group 8.svg" alt="">
+            <img class="xl:block hidden absolute left-0 w-[50%] mt-[100px] z-0" src="./foto/pattern.svg" alt="">
+            <div>
+                <p class=" font-bold text-[14px] text-[#244886]">Core features</p>
+                <p class="text-[35px] xl:text-[48px] text-[#0F2137] w-[360px] xl:w-[510px] font-bold">Smart Jackpotsthat
+                    you may love this anytime &
+                    anywhere</p>
+                <div
+                    class="w-[370px] flex-wrap xl:w-[500px] xl:h-[160px] h-[260px] bg-white justify-center pt-[20px] rounded-[30px] mt-[40px] flex">
+                    <img class="w-[57px] h-[57px]" src="./foto/Group.svg" alt="">
+                    <div class="ml-[20px]">
+                        <p>Smart Features</p>
+                        <p class="pt-[20px] w-[355px] text-[15px] text-[#343D48]">Get your blood tests delivered at let
+                            home collect sample from the victory of the managments.your blood tests.</p>
+                    </div>
+                </div>
+                <div
+                    class="w-[370px] flex-wrap xl:w-[500px] xl:h-[160px] h-[260px] bg-white shadow-md justify-center pt-[20px] rounded-[30px] mt-[40px] flex">
+                    <img class="w-[57px] h-[57px]" src="./foto/Group (1).svg" alt="">
+                    <div class="ml-[20px]">
+                        <p>Secure Contents</p>
+                        <p class="pt-[20px] w-[355px] text-[15px] text-[#343D48]">Get your blood tests delivered at let
+                            home collect sample from the victory of the managments.your blood tests.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <p class="font-bold text-[14px] text-[#244886] text-center pt-[50px]">Quality features</p>
+        <p class="text-center font-bold text-[36px] text-[#0F2137]">Meet exciting feature of app</p>
+        <div class="flex justify-center mt-[100px]">
+            <div class="w-[1447px] flex flex-wrap justify-center ">
+                <div class="flex justify-center gap-[70px] flex-wrap">
+                    <div class="w-[370px] flex gap-[25px]">
+                        <img class="w-[82px] h-[82px]" src="./foto/icon (4).svg" alt="">
+                        <div>
+                            <p class="font-bold text-[18px] text-[#0F2137]">Smart Features</p>
+                            <p class="text-[15px] text-[#343D48] pt-[19px] w-[263px]">Get your blood tests delivered at
+                                let
+                                home
+                                collect sample from the victory of the managments.</p>
+                        </div>
+                    </div>
+                    <div class="w-[370px] flex gap-[25px]">
+                        <img class="w-[82px] h-[82px]" src="./foto/icon (5).svg" alt="">
+                        <div>
+                            <p class="font-bold text-[18px] text-[#0F2137]">Fast Performance</p>
+                            <p class="text-[15px] text-[#343D48] pt-[19px] w-[263px]">Get your blood tests delivered at
+                                let
+                                home
+                                collect sample from the victory of the managments.</p>
+                        </div>
+                    </div>
+                    <div class="w-[370px] flex gap-[25px]">
+                        <img class="w-[82px] h-[82px]" src="./foto/icon (6).svg" alt="">
+                        <div>
+                            <p class="font-bold text-[18px] text-[#0F2137]">Unlimited Content</p>
+                            <p class="text-[15px] text-[#343D48] pt-[19px] w-[263px]">Get your blood tests delivered at
+                                let
+                                home
+                                collect sample from the victory of the managments.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex-wrap flex justify-center mt-[100px] gap-[70px]">
+                    <div class="w-[370px] flex gap-[25px]">
+                        <img class="w-[82px] h-[82px]" src="./foto/icon (7).svg" alt="">
+                        <div>
+                            <p class="font-bold text-[18px] text-[#0F2137]">Ultimate Customization</p>
+                            <p class="text-[15px] text-[#343D48] pt-[19px] w-[263px]">Get your blood tests delivered at
+                                let
+                                home collect sample from the victory of the managments.</p>
+                        </div>
+                    </div>
+                    <div class="w-[370px] flex gap-[25px]">
+                        <img class="w-[82px] h-[82px]" src="./foto/icon (8).svg" alt="">
+                        <div>
+                            <p class="font-bold text-[18px] text-[#0F2137]">Boost Productivity</p>
+                            <p class="text-[15px] text-[#343D48] pt-[19px] w-[263px]">Get your blood tests delivered at
+                                let
+                                home collect sample from the victory of the managments.</p>
+                        </div>
+                    </div>
+                    <div class="w-[370px] flex gap-[25px]">
+                        <img class="w-[82px] h-[82px]" src="./foto/icon (9).svg" alt="">
+                        <div>
+                            <p class="font-bold text-[18px] text-[#0F2137]">Customer Support</p>
+                            <p class="text-[15px] text-[#343D48] pt-[19px] w-[263px]">Get your blood tests delivered at
+                                let
+                                home collect sample from the victory of the managments.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div>
+            <div>
+                <p class="text-[14px] font-bold text-[#244886]" >Core features</p>
+                <p>Smart Jackpotsthat you may love this anytime & anywhere</p>
+            </div>
         </div>
     </section>
 </body>
