--- a/src/lessen.html
+++ b/src/lessen.html
@@ -189,10 +189,50 @@
                 </div>
             </div>
         </div>
-        <div>
-            <div>
-                <p class="text-[14px] font-bold text-[#244886]" >Core features</p>
-                <p>Smart Jackpotsthat you may love this anytime & anywhere</p>
+        <div class="flex justify-center flex-wrap">
+            <div class="mt-[100px] pl-[20px] xl:pl-[0px] ">
+                <p class="text-[14px] pt-[40px] font-bold text-[#244886]">Core features</p>
+                <p class="pt-[10px] w-[370px] text-[42px] xl:text-[48px] font-bold text-[#0F2137] xl:w-[510px]">Smart
+                    Jackpotsthat you may love this anytime & anywhere</p>
+                <p class="pt-[40px] w-[370px] xl:w-[454px] text-[18px] text-[#02073E]">Get your tests delivered at let
+                    home collect sample <br class="hidden xl:block"> from the victory of the managments that supplies
+                    <br class="hidden xl:block"> best design system guidelines ever. Get your tests <br
+                        class="hidden xl:block"> delivered at let home collect sample.</p>
+                <button class="w-[150px] h-[50px] rounded-[50px] bg-[#1F3E76] font-medium text-white mt-[30px]">Get
+                    Started</button>
+            </div>
+            <img class="xl:mt-[0px] mt-[50px]" src="./foto/Group 8 (1).svg" alt="">
+        </div>
+        <div class="bg-[#1E3C72] h-[770px] mt-[150px]">
+            <p class="text-white text-center font-bold opacity-70 text-[14px] pt-[120px]">Whats the function</p>
+            <p class="text-[36px] text-center font-bold text-white">Let’s see how it works</p>
+            <div class="flex justify-center gap-[61px] mt-[98px]">
+                <img class="absolute left-[400px]  w-[201px] h-[40px]" src="./foto/arrow.svg" alt="">
+                <div class="w-[263px]">
+                    <img class="w-[72px] h-[72px]" src="./foto/Group (2).svg" alt="">
+                    <p class="font-bold text-[22px] text-white pt-[25px]"> Set disbursement <br>
+                        Instructions</p>
+                    <p class="text-[15px] w-[250px] pt-[15px] opacity-65 text-white">Get your blood tests delivered athome collect a sample
+                        from theyour blood tests.</p>
+                </div>
+                <div class="w-[263px]">
+                    <img class="w-[72px] h-[72px]" src="./foto/Group (3).svg" alt="">
+                    <p class="font-bold text-[22px] text-white pt-[25px]">Assembly retrieves <br> funds from your account</p>
+                    <p class="text-[15px] w-[250px] pt-[15px] opacity-65 text-white">Get your blood tests delivered athome collect a sample
+                        from theyour blood tests.</p>
+                </div>
+                <div class="w-[263px]">
+                    <img class="w-[72px] h-[72px]" src="./foto/Group (4).svg" alt="">
+                    <p class="font-bold text-[22px] text-white pt-[25px]">Assembly initiates <br> disbursement</p>
+                    <p class="text-[15px] w-[250px] pt-[15px] opacity-65 text-white">Get your blood tests delivered athome collect a sample
+                        from theyour blood tests.</p>
+                </div>
+                <div class="w-[263px]">
+                    <img class="w-[72px] h-[72px]" src="./foto/Group (5).svg" alt="">
+                    <p class="font-bold text-[22px] text-white pt-[25px]"> Customer receives <br> funds payment</p>
+                    <p class="text-[15px] w-[250px] pt-[15px] opacity-65 text-white">Get your blood tests delivered athome collect a sample
+                        from theyour blood tests.</p>
+                </div>
             </div>
         </div>
     </section>
